# sagakit

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 001-why-sagas-over-2pc.md  002-redis-streams-as-default-transport.md  003-idempotency-strategy.md  004-compensation-semantics.md
examples/order_processing/: README.md  run.py  steps.py
src/sagakit/: __init__.py
src/sagakit/core/: __init__.py  context.py  result.py  saga.py  step.py
src/sagakit/executor/: __init__.py  config.py  executor.py
src/sagakit/storage/: __init__.py  base.py  redis_storage.py
src/sagakit/transport/: __init__.py  base.py  message.py  redis_transport.py
tests/integration/: test_redis_integration.py
tests/unit/: test_context.py  test_executor.py  test_result.py  test_saga.py  test_smoke.py  test_step.py  test_storage.py  test_transport.py
